@@ -1,3 +1,8 @@
+2006-01-02  Paul Hilfinger  <hilfingr@nile.gnat.com>
+
+	* ada-exp.y (syntax definitions,write_var_or_type,write_name_assoc): 
+	Change uses of "illegal" to "invalid".
+	
 2006-01-02  Paul N. Hilfinger  <hilfinger@adacore.com>
 
 	* ada-exp.y: Considerable reorganization to move functionality
